capture: throttle list emissions; fix spinner never showing; orange + debug count
Three things:

1. Emission throttle (BrowserDownloadRepository): a media-heavy page (twitch/
   kick) captures 200+ items in a burst, and every addValue re-sorted the whole
   list + ran a DiffUtil pass. Now leading-edge emit (first capture instant) +
   a single trailing flush per 175ms window, collapsing the burst. emitData()
   split into scheduleEmit() (throttle) + doEmit() (snapshots under the list
   lock since the trailing flush runs on the main thread).

2. Spinner never appeared with a full queue (the reported bug): onInflightChanged
   removed+re-posted the delayed show on EVERY count change, and a busy page
   emits hundreds of rapid changes, so the 400ms show timer was perpetually
   reset and never fired. Now the show is armed once (not rescheduled while
   busy), with a longer hide linger so gaps between bursts don't flicker it off.

3. Spinner tinted brand orange (@color/brand_orange); re-added the BuildConfig
   "queue: N" toolbar subtitle for debugging.